# carli-web

backend/: .gga  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  PRD.MD  README.md  TODO.MD  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2026_02_05_3619c0186ac2_database_inicialization.py  2026_02_07_5909f6cf0921_database_inicialization.py
backend/project/: __init__.py  backend_project.py  base_project.py  frontend_project.py
backend/src/: main.py
backend/src/builders/: __init__.py  template_file_builder.py  template_interface_builder.py
backend/src/configurations/: __init__.py  config.py  configuration.py
backend/src/database/: __init__.py  connection.py
backend/src/database/models/: __init__.py  base.py  permission.py  project.py  role.py  role_permission.py  user.py
backend/src/enums/: __init__.py  environment.py  integrations.py  permission.py  project.py
backend/src/errors/: __init__.py  auth.py  gemini.py  gitlab.py  jira.py  logfire.py  project.py  sonarqube.py
backend/src/integrations/: __init__.py
backend/src/integrations/gemini/: SYSTEM_PROMPT.md  __init__.py  gemini.py  schemas.py
backend/src/integrations/gitlab/: __init__.py  domain.py  gitlab.py  schemas.py
backend/src/integrations/jira/: __init__.py  jira.py  schemas.py
backend/src/integrations/logfire/: __init__.py  logfire.py  schemas.py
backend/src/integrations/sonarqube/: __init__.py  schemas.py  sonarqube.py
backend/src/repositories/: __init__.py  auth_repository.py  project_repository.py
backend/src/routes/: __init__.py  auth_http.py  project_http.py  webhook_http.py
backend/src/routes/dependencies/: __init__.py  dependencies.py
backend/src/schemas/: __init__.py  builder.py  project.py  webhook.py
backend/src/services/: __init__.py  auth_service.py  project_service.py  webhook_service.py
backend/src/templates/agent/: backend.AGENT.md.j2  frontend_next.AGENT.md.j2  frontend_quasar.AGENT.md.j2
backend/src/templates/alembic/: backend.alembic.ini.j2  backend.env.py.j2
backend/src/templates/ci/: backend.gitlab-ci.yml.j2
backend/src/templates/configurations/: backend.config.py.j2
backend/src/templates/debug/: backend.launch.json.j2  frontend.launch.json.j2  frontend_quasar.launch.json.j2
backend/src/templates/docker/: backend.Dockerfile.j2  backend.docker-compose.j2  frontend.Dockerfile.j2  frontend_next.Dockerfile.j2  (+1 more)
backend/src/utils/: __init__.py  security.py  template_generator.py  text.py
frontend/: package.json  (+1 more)
(+11 files in other folders)
